--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-mocha": "^2.1.3",
     "istanbul-harmony": "^0.3.16",
     "mocha": "^2.2.5",
